@@ -1,3 +1,8 @@
+2004-08-30  Davyd Madeley  <davyd@madeley.id.au>
+
+	* battstat_applet.c: Fix a crasher with battery notifications. Closes
+	#151412. Patch by Carlos Garnacho Parro <carlosg@gnome.org>.
+
 2004-08-09  Davyd Madeley  <davyd@madeley.id.au>
 
 	* battstat_applet.c: Another largish string break (related to the last
